00-vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block       = local.vpc_cidr
  instance_tenancy = "default"
  enable_dns_hostnames = true

  tags = merge( 
    local.vpc_tags,
    {
        Name = local.common_suffix_name
    }
  )
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.main.id

  tags = merge( 
    local.vpc_tags,
    {
        Name = local.common_suffix_name
    }
  )
}

resource "aws_subnet" "public" {
  count = length(var.public_subnet_cidrs)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.public_subnet_cidrs[count.index]

  map_public_ip_on_launch = true
  availability_zone = local.az_names[count.index]

  tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-public"
    }
  )
}
resource "aws_subnet" "private" {
  count = length(var.private_subnet_cidrs)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnet_cidrs[count.index]

  map_public_ip_on_launch = true
  availability_zone = local.az_names[count.index]

  tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-private"
    }
  )
}
resource "aws_subnet" "database" {
  count = length(var.database_subnet_cidrs)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.database_subnet_cidrs[count.index]

  map_public_ip_on_launch = true
  availability_zone = local.az_names[count.index]

  tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-database"
    }
  )
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

   tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-public"
    }
  )
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

   tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-private"
    }
  )
}

resource "aws_route_table" "database" {
  vpc_id = aws_vpc.main.id

   tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-database"
    }
  )
}

resource "aws_route" "public" {
  route_table_id            = aws_route_table.public.id
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.this.id
}
resource "aws_route" "private" {
  route_table_id            = aws_route_table.private.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id

}
resource "aws_route" "database" {
  route_table_id            = aws_route_table.database.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id

}

resource "aws_route_table_association" "public" {
  count = length(var.public_subnet_cidrs)
  subnet_id      = aws_subnet.public.id[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count = length(var.private_subnet_cidrs)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "database" {
  count = length(var.database_subnet_cidrs)
  subnet_id      = aws_subnet.database[count.index].id
  route_table_id = aws_route_table.database.id
}

resource "aws_eip" "elastic_ip" {
  domain   = "vpc"
   tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-elastic_ip"
    }
  )
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.elastic_ip.id
  subnet_id     = aws_subnet.public[0].id

  tags = merge( 
    local.vpc_tags,
    {
        Name = "${local.common_suffix_name}-nat"
    }
  )
  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.this.id]
}
